# nornir_jsonrpc

./: CHANGELOG.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  release.yml  test.yml
src/nornir_jsonrpc/: connection.py  tasks.py
src/nornir_jspnrpc/: __init__.py  connection.py  tasks.py
tests/: test_rpc.py
